# gnome-browser-connector

./: .gitignore  .gitlab-ci.yml  .landscape.yml  CMakeLists.txt  NEWS  README.md  chrome-gnome-shell.doap  gnome-browser-connector  gnome-browser-connector-host  gnome-browser-connector-host.py.in  gnome-browser-connector.doap  gnome-browser-connector.py.in  gnome-browser-connector_42.0.orig.tar.xz.delta  gnome-browser-connector_42.0.orig.tar.xz.id  meson.build
connector/: chrome-gnome-shell.py  org.gnome.ChromeGnomeShell.desktop  org.gnome.ChromeGnomeShell.service.in  org.gnome.chrome_gnome_shell.firefox.json  setup.py
contrib/: chrome-messages2po.py  merge_json.py  org.gnome.BrowserConnector.desktop  org.gnome.BrowserConnector.desktop.in  org.gnome.BrowserConnector.service.in  org.gnome.ChromeGnomeShell.desktop  org.gnome.ChromeGnomeShell.service.in  org.gnome.browser_connector.json  org.gnome.chrome_gnome_shell.json  po2chrome-messages.py  translation-coverage.php
contrib/chrome-web-store/: cs  da  de  en  es  fi  fr  gd  gl  hr  hu  id  it  ko  nl  oc  pl  pt_BR  ru  sk  sr  sv  tr
contrib/policies/: chrome-gnome-shell.json
contrib/ubuntu/: README.Debian  changelog  control  copyright  postrm  preinst  rules
debian/: README.Debian  changelog  control  control.in  copyright  files  gbp.conf  gnome-browser-connector.install  maintscript  postinst  postrm  rules  watch
extension/: content-script-start.js  extension.html  extension.js  manifest.firefox.json  manifest.json  options.html  options.js
extension/_locales/ca/: messages.json
extension/_locales/cs/: messages.json
extension/_locales/da/: messages.json
extension/_locales/de/: messages.json
extension/_locales/el/: messages.json
extension/_locales/en/: messages.json
extension/_locales/es/: messages.json
extension/_locales/et/: messages.json
extension/_locales/fi/: messages.json
extension/_locales/fr/: messages.json
extension/_locales/gd/: messages.json
extension/_locales/hr/: messages.json
extension/_locales/hu/: messages.json
extension/_locales/id/: messages.json
extension/_locales/it/: messages.json
extension/_locales/ko/: messages.json
extension/_locales/nb/: messages.json
extension/_locales/nl/: messages.json
extension/_locales/oc/: messages.json
extension/_locales/pl/: messages.json
extension/_locales/pt_BR/: messages.json
extension/_locales/pt_PT/: messages.json
extension/_locales/ru/: messages.json
extension/_locales/sk/: messages.json
extension/_locales/sl/: messages.json
extension/_locales/sr/: messages.json
extension/_locales/sv/: messages.json
extension/_locales/tr/: messages.json
extension/css/: options.css
extension/include/: compat-common.js  compat-content-script.js  constants.js  gsc.js  notifications.js  sweettooth-api.js  sync.js  update.js
gnome_browser_connector/: __init__.py  application.py  base.py  connector.py  constants.py  helpers.py  logging.py  logs.py  service.py  version.py
po/: LINGUAS  README  ca.po  chrome-gnome-shell.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  template.pot  tr.po  uk.po  (+2 more)
